--- a/angular/projects/admin/src/app/exports/new-export-trigger.component.html
+++ b/angular/projects/admin/src/app/exports/new-export-trigger.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
   <h1 class="h2">New Export Trigger</h1>
 </div>
-<shared-form class="d-block col-xl-6" (create)="onCreate($event)" type="exportTriggers">
+<shared-form class="d-block col-xl-6" [transformRecord]="transformRecord" (create)="onCreate($event)" type="exportTriggers">
   <ng-template let-record="record" let-error="error">
     <admin-exports-trigger-form [record]="record" [error]="error"></admin-exports-trigger-form>
   </ng-template>
