--- a/angular/projects/admin/src/app/exports/export-trigger-form.component.html
+++ b/angular/projects/admin/src/app/exports/export-trigger-form.component.html
@@ -1,18 +1,28 @@
-<div class="mb-3">
-  <shared-text-field id="name" label="Name" [source]="record" [target]="record" [error]="error"></shared-text-field>
+<div *ngIf="!record.id" class="mb-3">
+  <ng-template #rt let-r="result" let-t="term">{{ r.name }} ({{ r.stateUniqueId }})</ng-template>
+  <shared-search-field
+    id="agency"
+    label="Agency"
+    placeholder="Start typing a name..."
+    [searchHandler]="searchHandler"
+    [inputFormatter]="formatter"
+    [resultTemplate]="rt"
+    [source]="record"
+    [target]="record"
+    [error]="error"></shared-search-field>
 </div>
 <div class="mb-3">
   <shared-select-field id="type" label="Type" [source]="record" [target]="record" [error]="error">
-    <option value="NEMSIS">NEMSIS SOAP</option>
-    <option value="ESO">ESO Partner</option>
+    <option value="SAVE">On Save</option>
   </shared-select-field>
 </div>
 <div class="mb-3">
-  <shared-text-field id="authUrl" label="Auth URL" [source]="record" [target]="record" [error]="error"></shared-text-field>
+  <shared-text-field id="debounceTime" label="Debounce Time" [source]="record" [target]="record" [error]="error"></shared-text-field>
 </div>
 <div class="mb-3">
-  <shared-text-field id="apiUrl" label="API URL" [source]="record" [target]="record" [error]="error"></shared-text-field>
+  <shared-checkbox id="isEnabled" label="Is Enabled?" [source]="record" [target]="record" [error]="error"></shared-checkbox>
 </div>
+<h4>Credentials</h4>
 <div class="mb-3">
   <shared-text-field id="username" label="Username" [source]="record" [target]="record" [error]="error"></shared-text-field>
 </div>
@@ -21,13 +31,4 @@
 </div>
 <div class="mb-3">
   <shared-text-field id="organization" label="Organization" [source]="record" [target]="record" [error]="error"></shared-text-field>
-</div>
-<div class="mb-3">
-  <shared-checkbox id="isVisible" label="Is Visible?" [source]="record" [target]="record" [error]="error"></shared-checkbox>
-</div>
-<div class="mb-3">
-  <shared-checkbox id="isApprovalReqd" label="Is Approval Required?" [source]="record" [target]="record" [error]="error"></shared-checkbox>
-</div>
-<div class="mb-3">
-  <shared-checkbox id="isOverridable" label="Is Overridable?" [source]="record" [target]="record" [error]="error"></shared-checkbox>
 </div>
