--- a/angular/projects/admin/src/app/app.component.html
+++ b/angular/projects/admin/src/app/app.component.html
@@ -57,6 +57,9 @@
       <a routerLink="/facilities" routerLinkActive="sidebar__item--active" class="sidebar__item">Facilities</a>
     </li>
     <li>
+      <a routerLink="/guides" routerLinkActive="sidebar__item--active" class="sidebar__item">Guides</a>
+    </li>
+    <li>
       <a routerLink="/lists" routerLinkActive="sidebar__item--active" class="sidebar__item">Lists</a>
     </li>
     <li>
