--- a/angular/projects/admin/src/app/guides/edit-guide.component.html
+++ b/angular/projects/admin/src/app/guides/edit-guide.component.html
@@ -49,9 +49,23 @@
           <table class="table">
             <thead>
               <tr class="list">
-                <th>Sections <a [routerLink]="['/exports', record.id, 'triggers', 'new']" class="btn btn--sm btn--primary ms-3">Add</a></th>
+                <th>Section <a [routerLink]="['/guides', record.id, 'sections', 'new']" class="btn btn--sm btn--primary ms-3">Add</a></th>
+                <th>Position</th>
+                <th>Is Visible?</th>
               </tr>
             </thead>
+            <shared-list type="guideSections" [params]="params" [basePath]="'/guides/' + record.id">
+              <ng-template let-records="records" let-r="record">
+                <tr [routerLink]="['/guides', record.id, 'sections', r.id]">
+                  <td>{{ r.name }}</td>
+                  <td>{{ r.position }}</td>
+                  <td>
+                    <span *ngIf="r.isVisible">Yes</span>
+                    <span *ngIf="!r.isVisible">No</span>
+                  </td>
+                </tr>
+              </ng-template>
+            </shared-list>
           </table>
         </div>
       </ng-container>
