--- a/angular/projects/design/src/styles.scss
+++ b/angular/projects/design/src/styles.scss
@@ -4,7 +4,7 @@
 @import 'node_modules/bootstrap/scss/root';
 @import 'node_modules/bootstrap/scss/reboot';
 @import 'node_modules/bootstrap/scss/type';
-// @import "~bootstrap/scss/images";
+@import 'node_modules/bootstrap/scss/images';
 @import 'node_modules/bootstrap/scss/containers';
 @import 'node_modules/bootstrap/scss/grid';
 // @import "~bootstrap/scss/tables";
