Add editing preview, tweak styles on public

--- a/angular/projects/admin/src/app/guides/guide-item-form.component.html
+++ b/angular/projects/admin/src/app/guides/guide-item-form.component.html
@@ -3,6 +3,10 @@
 </div>
 <div class="mb-3">
   <shared-text-field id="body" label="Body" [rows]="3" [source]="record" [target]="record" [error]="error"></shared-text-field>
+  <div class="p-3">
+    <b>Preview:</b>
+    <p [innerHTML]="record.body"></p>
+  </div>
 </div>
 <div class="mb-3">
   <shared-text-field id="position" label="Position" type="number" [source]="record" [target]="record" [error]="error"></shared-text-field>
