[Closes #325] Update Our Story

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -131,17 +131,6 @@
       </div>
       <div class="row">
         <div class="col-lg-3">
-          <img src="/images/bio-ray.jpg" alt="Portrait of Ray Lehr">
-        </div>
-        <div class="col-lg-9">
-          <h4>Chief Ray Lehr<span>&nbsp;&nbsp;|&nbsp;&nbsp;Advisor</span>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/ray-lehr-331789a/"><i class="fab fa-linkedin"></i></a></h4>
-          <p>Chief Ray Lehr has worked in public safety for over four decades. As a fire chief and incident commander, he has first hand knowledge of the needs of first responders at mass casualty events. For the past 10 years he has supported the development of new technologies to help public safety improve their operations to increase efficiency and save lives. Ray is passionate about public safety and innovation and is excited to join the Peak Response team.</p>
-          <p class="story__quote">Working with smart developers like Francis and Britt who are driven to help solve technology problems for first responders is a wonderful opportunity to do good for our communities.</p>
-          <p class="story__quote-attribution">&mdash; Chief Ray Lehr</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-3">
           <img src="/images/bio-charlie.jpg" alt="Portrait of Charlie Fair">
         </div>
         <div class="col-lg-9">
@@ -149,6 +138,17 @@
           <p>Lieutenant Charlie Fair brings over 30 years of EMS, public safety, and government experience to the Peak Response team. He has unique interdisciplinary expertise and likes to say that he speaks both &ldquo;public safety&rdquo; and &ldquo;information technology.&rdquo; Lt Fair responded to many local disasters, mass casualty incidents (MCI), and tornadoes during his career and is now passionate about contributing to technology innovation in the public safety space.</p>
           <p class="story__quote">I am excited to be working with Peak Response to help get this life-impacting technology into the hands of the responders.</p>
           <p class="story__quote-attribution">&mdash; Lt Charlie Fair</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3">
+          <img src="/images/bio-ray.jpg" alt="Portrait of Ray Lehr">
+        </div>
+        <div class="col-lg-9">
+          <h4>Chief Ray Lehr<span>&nbsp;&nbsp;|&nbsp;&nbsp;Tech to Protect Mentor, Former Advisor</span>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/ray-lehr-331789a/"><i class="fab fa-linkedin"></i></a></h4>
+          <p>Chief Ray Lehr has worked in public safety for over four decades. As a fire chief and incident commander, he has first hand knowledge of the needs of first responders at mass casualty events. For the past 10 years he has supported the development of new technologies to help public safety improve their operations to increase efficiency and save lives. Ray was a mentor to the Peak Response team during the Tech to Protect challenge and an advisor until his retirement in 2023.</p>
+          <p class="story__quote">Working with smart developers like Francis and Britt who are driven to help solve technology problems for first responders is a wonderful opportunity to do good for our communities.</p>
+          <p class="story__quote-attribution">&mdash; Chief Ray Lehr</p>
         </div>
       </div>
     </div>
