--- a/angular/projects/shared/src/lib/components/form.component.html
+++ b/angular/projects/shared/src/lib/components/form.component.html
@@ -1,4 +1,4 @@
-<form #form="ngForm" (submit)="onSubmit()">
+<form #form="ngForm" (submit)="onSubmit()" autocomplete="off">
   <fieldset [disabled]="loading || disabled">
     <template [ngTemplateOutlet]="template" [ngTemplateOutletContext]="{ record: record, error: error }"></template>
     <div *ngIf="!hideButtons && !loading" class="mb-3 d-flex justify-content-between">
