[Closes #322] Don't add img div if no file image attachment

--- a/angular/projects/guides/src/app/guide.component.html
+++ b/angular/projects/guides/src/app/guide.component.html
@@ -9,7 +9,7 @@
       <h3 class="mb-3">{{ section.name }}</h3>
       <div class="d-flex flex-wrap">
         <div class="guide-item me-5 mb-5" *ngFor="let item of section.items; index as i">
-          <div class="guide-item__img shadow mb-3">
+          <div *ngIf="item.file" class="guide-item__img shadow mb-3">
             <img class="img-fluid" [src]="item.fileUrl" />
           </div>
           <div class="guide-item__body p-3" [innerHTML]="'<h3>' + (i + 1) + '.</h3> ' + item.body"></div>
