Adding Region admin management section

--- a/angular/projects/admin/src/app/app.component.html
+++ b/angular/projects/admin/src/app/app.component.html
@@ -69,6 +69,9 @@
       <a routerLink="/psaps" routerLinkActive="sidebar__item--active" class="sidebar__item">PSAPs</a>
     </li>
     <li>
+      <a routerLink="/regions" routerLinkActive="sidebar__item--active" class="sidebar__item">Regions</a>
+    </li>
+    <li>
       <a routerLink="/states" routerLinkActive="sidebar__item--active" class="sidebar__item">States</a>
     </li>
     <li>
