--- a/angular/projects/admin/src/app/regions/edit-region.component.html
+++ b/angular/projects/admin/src/app/regions/edit-region.component.html
@@ -20,6 +20,12 @@
           <h3>{{ record.name }}</h3>
         </div>
         <div class="mb-3">
+          <label>Agencies</label>
+          <h3 *ngFor="let regionAgency of record.regionAgencies">
+            {{ regionAgency.agency?.name }} ({{ regionAgency.agency?.stateUniqueId }})
+          </h3>
+        </div>
+        <div class="mb-3">
           <button (click)="isEditing = true" class="btn btn--sm btn--primary">Edit</button>
         </div>
       </ng-container>
