--- a/angular/projects/shared/src/lib/components/fields/array-field.component.html
+++ b/angular/projects/shared/src/lib/components/fields/array-field.component.html
@@ -6,20 +6,22 @@
   [class.form-field--invalid]="isInvalid"
   [class.form-field--noclear]="!showClearButton"
   [class.form-field--nonempty]="isNonEmpty"
-  [class.form-field--unconfirmed]="isUnconfirmed"
-  (update)="onSorted($event)"
-  [sortablejs]="value"
-  [sortablejsOptions]="{ sort: isEditing }">
+  [class.form-field--unconfirmed]="isUnconfirmed">
   <label
     >{{ label }} <ng-container *ngIf="headerTemplate"> <ng-template [ngTemplateOutlet]="headerTemplate"></ng-template> </ng-container
   ></label>
-  <ng-container *ngIf="value && value.length > 0">
+  <div
+    *ngIf="value && value.length > 0"
+    class="form-field__items"
+    (update)="onSorted($event)"
+    [sortablejs]="value"
+    [sortablejsOptions]="{ sort: isEditing }">
     <div *ngFor="let item of value; let i = index" [attr.data-index]="i" class="form-field__item" (click)="onClick($event)">
       <ng-template
         [ngTemplateOutlet]="itemTemplate"
         [ngTemplateOutletContext]="{ item, removeItem: onRemoveItem, updateItem: onUpdateItem }"></ng-template>
     </div>
-  </ng-container>
+  </div>
   <div *ngIf="formTemplate" class="form-field__content">
     <ng-template [ngTemplateOutlet]="formTemplate" [ngTemplateOutletContext]="{ addItem: onAddItem }"></ng-template>
   </div>
