Working CustomResults rendering

--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-multi.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-multi.component.html
@@ -9,6 +9,7 @@
     <shared-xsd-element-nillable
       [xsd]="xsd"
       [record]="record"
+      [stack]="stack"
       [basePath]="basePath"
       [element]="element"
       [data]="data"
@@ -28,6 +29,7 @@
   <shared-xsd-element-nillable
     [xsd]="xsd"
     [record]="record"
+    [stack]="stack"
     [basePath]="basePath"
     [element]="element"
     [data]="data"
