--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-nillable.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-nillable.component.html
@@ -8,6 +8,7 @@
         class="form-floating"
         [xsd]="xsd"
         [record]="record"
+        [stack]="stack"
         [basePath]="basePath"
         [element]="element"
         [data]="data"
@@ -53,6 +54,7 @@
               <shared-xsd-element-input
                 [xsd]="xsd"
                 [record]="record"
+                [stack]="stack"
                 [basePath]="basePath"
                 [element]="element"
                 [attribute]="otherAttribute"
