--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-input.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-input.component.html
@@ -4,6 +4,7 @@
     *ngSwitchCase="COMPONENT_TYPES.city"
     [xsd]="xsd"
     [record]="record"
+    [stack]="stack"
     [basePath]="basePath"
     [element]="element"
     [attribute]="attribute"
@@ -18,6 +19,7 @@
     *ngSwitchCase="COMPONENT_TYPES.county"
     [xsd]="xsd"
     [record]="record"
+    [stack]="stack"
     [basePath]="basePath"
     [element]="element"
     [attribute]="attribute"
@@ -32,6 +34,7 @@
     *ngSwitchCase="COMPONENT_TYPES.input"
     [xsd]="xsd"
     [record]="record"
+    [stack]="stack"
     [basePath]="basePath"
     [element]="element"
     [attribute]="attribute"
@@ -45,6 +48,7 @@
     *ngSwitchCase="COMPONENT_TYPES.select"
     [xsd]="xsd"
     [record]="record"
+    [stack]="stack"
     [basePath]="basePath"
     [element]="element"
     [attribute]="attribute"
@@ -58,6 +62,7 @@
     *ngSwitchCase="COMPONENT_TYPES.selectState"
     [xsd]="xsd"
     [record]="record"
+    [stack]="stack"
     [basePath]="basePath"
     [element]="element"
     [attribute]="attribute"
